Delete Travis CI

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Tugas besar mata kuliah LSTI 2017, proses bisnis \"pengangkatan pegawai\"",
   "main": "main.js",
   "scripts": {
-    "test": "./node_modules/gulp/bin/gulp.js test",
     "start": "node main.js"
   },
   "author": "Salma Fedora, Dwi Cahyo Pangestu, Adini Safia Zahra, Alfian Maulana Ibrahim, Andre Juliantama",
@@ -13,5 +12,6 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "pg-promise": "^9.1.2"
-  }
+  },
+  "devDependencies": {}
 }
