--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "description": "Tugas besar mata kuliah LSTI 2017, proses bisnis \"pengangkatan pegawai\"",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "nodemon main.js"
   },
   "author": "Salma Fedora, Dwi Cahyo Pangestu, Adini Safia Zahra, Alfian Maulana Ibrahim, Andre Juliantama",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "pg": "^7.12.1",
     "pg-promise": "^9.1.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.19.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alfinm01/employee-appointment.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alfinm01/employee-appointment/issues"
+  },
+  "homepage": "https://github.com/alfinm01/employee-appointment#readme"
 }
